# Latent-Logic

./: main.py  pyproject.toml
data/: physics_qualitative_README.txt  physics_qualitative_test.jsonl  physics_qualitative_train.jsonl
scripts/: baseline_unconditional.py  download_model.py  dump_model_outputs.py  extract_sae_activations.py  test.py
